# vfr-navlog

./: .gitignore  BASE-LAYERS-PLAN.md  LICENSE  README.md  REFACTORING.md  VOR-FIXES-PLAN.md  WAYPOINT-MAP-PAGES-PLAN.md  aircraft_c172.json  aircraft_sr22.json  dfs_charts.py  navlog.py  pyproject.toml
tests/: conftest.py  test_baselayers.py  test_cli.py  test_fixes.py  test_fpl.py  test_geo.py  test_legs.py  test_lnmpln.py  test_ofm.py  test_pdf_snapshot.py  test_vor_fixes_pdf.py  test_weather_parse.py  test_wp_maps_pdf.py  test_xplane.py
tests/fixtures/: pdf_snapshot.txt  sample.lnmpln
vfr_navlog/: __init__.py  baselayers.py  cli.py  config.py  dfs_charts.py  exports.py  fixes.py  geo.py  legs.py  lnmpln.py  model.py  navigraph.py  net.py  ofm.py  tui.py  vatsim.py  weather.py  xplane.py
vfr_navlog/pdf/: __init__.py  base.py  charts.py  destination.py  navlog_page.py  phraseology.py  waypoint_pages.py  weather_page.py
